# iter-num-tools

./: Cargo.toml  README.md
.github/workflows/: coverage.yml  rust.yml  test.yml
benches/: arange.rs  gridspace.rs  linspace.rs  logspace.rs  map.rs
src/: adapter.rs  arange.rs  arange_grid.rs  combine.rs  gridspace.rs  gridstep.rs  lerp.rs  lib.rs  linspace.rs  logspace.rs  map.rs  space.rs  step.rs  test_util.rs
src/accum/: mod.rs  num.rs  result.rs
src/grid/: mod.rs  transpose.rs  tuple.rs
src/gridspace/: mod.rs  three_d.rs  two_d.rs
