[package]
name = "iter_num_tools"
version = "0.4.2"
authors = ["Conrad Ludgate <conradludgate@gmail.com>"]
edition = "2018"
description = "Create simple iterators over non integer ranges. itertools + num = iter_num_tools"
license = "MIT"
readme = "README.md"
repository = "https://github.com/conradludgate/iter-num-tools"
keywords = ["numerics", "mathematics", "iterator"]
categories = ["algorithms", "rust-patterns", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = { version = "0.2", default-features = false, features = ["libm"] }

[dev-dependencies]
itertools = { version = "0.10" }
approx = "0.4"
criterion = "0.3"

[[bench]]
name = "linspace"
harness = false

[[bench]]
name = "logspace"
harness = false

[[bench]]
name = "arange"
harness = false
