[package]
name = "iter_num_tools"
version = "0.6.0"
authors = ["Conrad Ludgate <conradludgate@gmail.com>"]
edition = "2018"
description = "Create simple iterators over non integer ranges. itertools + num = iter_num_tools"
license = "MIT"
readme = "README.md"
repository = "https://github.com/conradludgate/iter-num-tools"
keywords = ["numerics", "mathematics", "iterator"]
categories = ["algorithms", "rust-patterns", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
array_iter_tools = "0.2.0"

[features]
trusted_len = []
iter_advance_by = []

[dev-dependencies]
itertools = "0.10"
itertools-num = "0.1.3"
criterion = "0.3"

[[bench]]
name = "linspace"
harness = false

[[bench]]
name = "logspace"
harness = false

[[bench]]
name = "arange"
harness = false
